# GitGetter

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  docker-compose.yml  proxies.txt  pyproject.toml  setup.cfg  test_api.py
src/gitgetter/: __init__.py  __main__.py  _service.py  api.py  service.py
src/gitgetter/api/: __init__.py  api.py
tests/api/: test_api.py
