[tool.poetry]
name = "gitgetter"
version = "0.1.0"
description = ""
authors = ["Deniz <deniztoma512@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7"
pydocstyle = "^4.0"
mypy = "^0.740.0"
flask = "^1.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
