[tool.poetry]
name = "gitgetter"
version = "0.1.0"
description = ""
authors = ["Deniz <deniztoma512@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flake8 = "^3.7"
pydocstyle = "^4.0"
mypy = "^0.740.0"
flask = "^1.1"
requests = "^2.22"
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
pytest-docstyle = "^1.5"
pytest-datadir = "^1.3"
stem = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
