[tool.poetry]
name = "gitgetter"
version = "0.1.0"
description = ""
authors = ["Deniz <deniztoma512@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-bugbear = "^20.1"
flake8-commas = "^2.0"
flake8-comprehensions = "^3.2"
flake8-import-order = "^0.18.1"
flake8-pep3101 = "^1.3"
flake8-quotes = "^2.1"
pep8-naming = "^0.9.1"
mypy = "^0.740.0"
pydocstyle = "^4.0"
pytest = "^5.2"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
pytest-datadir = "^1.3"
pytest-docstyle = "^1.5"
pytest-pythonpath = "^0.7.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
